exercise4/condor/495.0-error.txt
  File "train.py", line 53
    kernel_size=(3,3),
    ^
IndentationError: unexpected indent
